--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
     <div class="container">
         <h1>THE SIMON GAME</h1>
         <div class="outerCircle">
-            <div class="top-left"></div>
-            <div class="top-right"></div>
-            <div class="bottom-left"></div>
-            <div class="bottom-right"></div>
+            <div class="top-left button" id="green"></div>
+            <div class="top-right button" id="red"></div>
+            <div class="bottom-left button" id="yellow"></div>
+            <div class="bottom-right button" id="blue"></div>
     
             <div class="innerCircle">
                 <div id="title">SIMON!</div>
@@ -46,6 +46,7 @@
             </div>
         </div>  
     </div>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="app.js"></script>
 </body>
 </html>
